[project]
name = "mythologizer_postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.3.2",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "typer>=0.16.0",
]

[project.scripts]
mythologizer_postgres = "mythologizer_postgres.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mythologizer_postgres"]

[tool.hatch.build.targets.editable]
packages = ["mythologizer_postgres"]
