[project]
name = "mythologizer_postgres"
version = "0.1.0"
description = "PostgreSQL database connector for mythology data with vector embeddings"
authors = [{ name = "Pierre-Louis Suckrow", email = "suckrowpierre@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "mythicalgebra>=0.1.0",
    "numpy>=2.3.2",
    "pgvector>=0.4.1",
    "psycopg>=3.2.9",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "typer>=0.16.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "coverage>=7.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "coverage>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mythologizer_postgres = "mythologizer_postgres.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mythologizer_postgres*"]

[tool.setuptools.package-data]
mythologizer_postgres = ["*.sql", "*.yaml", "*.yml"]
